style: add branding ico

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>TmsWeb</title>
+  <title>TMS - Sistema de Gestión de Neumáticos | Dlirio Tyre</title>
+  <meta name="description" content="Sistema de Gestión de Neumáticos TMS - Solución integral para el control y monitoreo de neumáticos industriales.">
+  <meta name="keywords" content="TMS, neumáticos, gestión, industrial, Dlirio Tyre">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preload" href="assets/images/branding/logo-tms.png" as="image" type="image/png">
 </head>
 <body>
   <app-root></app-root>
