feat: add comprehensive favicon support for cross-platform compatibility

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,29 @@
 <!doctype html>
 <html lang="es">
+
 <head>
   <meta charset="utf-8">
-  <title>TMS - Sistema de Gestión de Neumáticos | Dlirio Tyre</title>
-  <meta name="description" content="Sistema de Gestión de Neumáticos TMS - Solución integral para el control y monitoreo de neumáticos industriales.">
+  <title>TMS</title>
+  <meta name="description"
+    content="Sistema de Gestión de Neumáticos TMS - Solución integral para el control y monitoreo de neumáticos.">
   <meta name="keywords" content="TMS, neumáticos, gestión, industrial, Dlirio Tyre">
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- Favicons -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preload" href="assets/images/branding/logo-tms-hor.png" as="image" type="image/png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
+  
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  
+  <!-- Preload branding assets -->
+  <link rel="preload" href="assets/images/branding/logo-tms.png" as="image" type="image/png">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
