feat: add comprehensive favicon support for cross-platform compatibility

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TMS</title>
+  <title>TMS - Tyre Management System</title>
   <meta name="description"
     content="Sistema de Gestión de Neumáticos TMS - Solución integral para el control y monitoreo de neumáticos.">
   <meta name="keywords" content="TMS, neumáticos, gestión, industrial, Dlirio Tyre">
